# command_line_tarot

./: LICENSE.md  PYPI_DESC.md  README.md  REFERENCE.md  card_directory.py  cli_tarot.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: learn-github-actions.yml  old_release_workflow.yml  release.yml
albano_waite_tarot/: README.md  albano_waite.py  ascii_art.py  card_directory.py  card_meanings.py  constants.py
argparse_tutorial/: tutorial_1.py  tutorial_2.py
cli_tarot/: README.md  __main__.py  card_meanings.py  constants.py  output.py  package.json  readings.py
command_line_tarot/: card_directory.py  constants.py  main.py
