[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cli-tarot"
version = "1.0.3"
description = "A convenient way to get a tarot reading on your terminal!"
readme = "cli_tarot/README.md"
content-type = "text/markdown"
requires-python = ">=3.9"
author = "Bianca Henderson"
author_email = "beeankha@gmail.com"
url = "https://github.com/beeankha/command_line_tarot"
keywords = ["tarot", "command line", "cli"]
