[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "cli-tarot"
version = "1.0.4"
description = "A convenient way to get a tarot reading on your terminal!"
readme = "cli_tarot/README.md"
content-type = "text/markdown"
requires-python = ">=3.9"
author = "Bianca Henderson"
author_email = "beeankha@gmail.com"
url = "https://github.com/beeankha/command_line_tarot"
keywords = ["tarot", "command line", "cli"]

[project.scripts]
cli-tarot = "cli_tarot.__main__:main"
