[metadata]
name = cli-tarot
description = A convenient way to get a tarot reading on your terminal!
long_description_content_type = text/markdown
url = https://github.com/beeankha/command_line_tarot
project_urls =
    Bug Tracker = https://github.com/beeankha/command_line_tarot-demo/issues
    Changelog = https://github.com/beeankha/command_line_tarot/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[project]
readme = "cli_tarot/README.md"
requires-python = ">=3.9"
author = "Bianca Henderson"
author_email = "beeankha@gmail.com"
url = "https://github.com/beeankha/command_line_tarot"
keywords = ["tarot", "command line", "cli"]
